# fastapi-template-pydanticv2

./: pyproject.toml  readme
alembic/: env.py
alembic/versions/: ca604f248c43_add_customm.py
modules/: main.py
modules/api/: deps.py
modules/api/v1/: api.py
modules/api/v1/endpoints/: item.py
modules/common/: __init__.py  parameters.py  util.py
modules/core/: config.py  security.py
modules/crud/: __init__.py  base.py  crud_item.py
modules/dataloader/: vector_database.py
modules/db/: base.py  init_db.py  query_builder.py  session.py
modules/models/: item.py
modules/queue_tasks/: __init__.py  celery_worker.py  celeryconfig.py
modules/schema/: __init__.py  item.py
