[tool.poetry]
name = "workspace"
version = "0.1.0"
description = ""
authors = ["hoanghuumanh54 <hoanghuumanh54@gmail.com>"]
readme = "README.md"
packages = [{include = "workspace"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.103.2"
uvicorn = "^0.23.2"
sqlalchemy = "^2.0.21"
alembic = "^1.12.0"
celery = "^5.3.4"
pydantic-settings = "^2.0.3"
psycopg2-binary = "^2.9.9"
unidecode = "^1.3.7"
slugify = "^0.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
